[package]
name = "awesome-rust"
version = "0.1.1"
authors = ["wujunze <itwujunze@163.com>"]
repository = "https://github.com/awesome-rust-com/awesome-rust"
homepage = "https://github.com/awesome-rust-com/awesome-rus"
keywords = ["awesome", "libraries", "frameworks"]
categories = ["resource"]
description= "A curated list of awesome Rust frameworks, libraries and software."
readme = "README.md"
license = "MIT"


[dependencies]
