[package]
name = "awesome-rust-com"
version = "1.1.1"
authors = ["wujunze <itwujunze@163.com>"]
repository = "https://github.com/awesome-rust-com/awesome-rust"
homepage = "https://github.com/awesome-rust-com/awesome-rust"
keywords = ["awesome", "libraries", "frameworks"]
categories = ["resource"]
description= "A curated list of awesome Rust frameworks, libraries and software."
readme = "README.md"
license = "MIT"


[dependencies]
